<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edukka</string>
    <string name="app_user">Javier Rosales Bañón</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register Here</string>

    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="fullname">Full Name</string>
...
    <string name="myprofile">My Profile</string>
    <string name="myclass">My Class</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>

    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>

    <string name="classname">Class Name</string>
    <string name="identifier">Identifier</string>
    <string name="information">Information</string>
    <string name="size">Size</string>

...
    <string name="dialogquiz">This action will erase your quiz from the database, are you sure?</string>

    <string name="completed">Completed Games</string>
    <string name="approved">Approved Games</string>
    <string name="average">Average Score</string>
    <string name="failure">Failure Rate</string>
    <string name="best">Most Played Subject</string>
    <string name="worst">Least Played Subject</string>

    <string name="empty">Can\'t be Empty</string>
    <string name="minimum">At least 4 characters</string>
    <string name="invalid">Invalid Username/Password</string>
    <string name="login_success">Successful Login</string>
...
