...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/md_keylines_x3">

    <TextView
        android:id="@+id/list_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/md_keylines_x3"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading"
        android:layout_alignParentStart="true"
...
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/list_body"
        tools:text="01-01-2018" />

    <TextView
        android:id="@+id/list_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_game"
        android:layout_toEndOf="@id/list_date"
        android:layout_marginStart="@dimen/md_keylines_x3"
        android:textColor="@color/colorSecondaryText"
...
